// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a component 1`] = `
<p
  className="sc-bdVaJa dPLIxs"
  transform="normal"
>
  default
</p>
`;

exports[`should render a component with a prop 1`] = `
<p
  className="sc-bdVaJa fqNXsQ"
  transform="normal"
>
  default
</p>
`;
